# sports-projection

./: .gitignore  LICENSE  README.md  integration_test.py  pyproject.toml  run_final.py
.github/workflows/: release.yml  test.yml
src/: __init__.py  cli.py  pipeline.py
src/data/: injury_provider.py  journal.py  kalshi_provider.py  mock_generator.py  nba_fetcher.py  nba_teams.py  odds_providers.py  outcome_lookup.py  polymarket_provider.py  upcoming.py
src/models/: __init__.py  advanced_engine.py  engine.py  player_prop_engine.py  probability.py  schemas.py  schemas_v2.py  trained_nba_model.py  value_engine.py
src/ui/: __init__.py  main_ui.py  player_prop_dashboard.py
tests/: test_engines.py
